started working on header

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Matthew Yoshihara</title>
+	<link rel="stylesheet" href="./style/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="./style/style.css">
+</head>
+<body>
+	<div class="main-header">
+		<h1>Hello World</h1>
+	</div>
+</body>
+</html>
