added gitignore, images, stylesheet and completed main header

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 	<link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-	<div class="main-header">
-		<h1>Hello World</h1>
+	<div class="main-header vertical-center-parent">
+		<div class="main-header-content vertical-center-child">
+			<h1>FULL-STACK WEB DEVELOPER</h1>
+			<p>with a passion for creating innovative solutions and writing clean code</p>
+		</div>
 	</div>
 </body>
 </html>
