added about me section

--- a/index.html
+++ b/index.html
@@ -13,5 +13,13 @@
 			<p>with a passion for creating innovative solutions and writing clean code</p>
 		</div>
 	</div>
+	<div class="about">
+		<div class="col-md-3">
+			<h2>About</h2>
+		</div>
+		<div class="col-md-9">
+			<p>Hello! My name is Matthew Yoshihara and I am software developer currently living in the beautiful city of Seattle. I am a problem solver at heart, and I am passionate about creating well-thought out solutions. I love being active and looking for ways to improve my basketball skills.</p>
+		</div>
+	</div>
 </body>
 </html>
