added skillset section

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Matthew Yoshihara</title>
 	<link rel="stylesheet" href="./style/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="./style/style.css">
@@ -19,6 +20,57 @@
 		</div>
 		<div class="col-md-9">
 			<p>Hello! My name is Matthew Yoshihara and I am software developer currently living in the beautiful city of Seattle. I am a problem solver at heart, and I am passionate about creating well-thought out solutions. I love being active and looking for ways to improve my basketball skills.</p>
+		</div>
+	</div>
+	<div class="skillset">
+		<div class="col-md-3">
+			<h2>Skill Set</h2>
+		</div>
+		<div class="col-md-9">
+			<div class="row">
+				<div class="col-md-3">
+					<div class="circle vertical-center-parent text-center">
+						<p class="vertical-center-child">Languages</p>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="circle vertical-center-parent text-center">
+						<p class="vertical-center-child">Languages</p>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="circle vertical-center-parent text-center">
+						<p class="vertical-center-child">Languages</p>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="circle vertical-center-parent text-center">
+						<p class="vertical-center-child">Languages</p>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-3">
+					<div class="circle vertical-center-parent text-center">
+						<p class="vertical-center-child">Languages</p>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="circle vertical-center-parent text-center">
+						<p class="vertical-center-child">Languages</p>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="circle vertical-center-parent text-center">
+						<p class="vertical-center-child">Languages</p>
+					</div>
+				</div>
+				<div class="col-md-3">
+					<div class="circle vertical-center-parent text-center">
+						<p class="vertical-center-child">Languages</p>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
