--- a/index.html
+++ b/index.html
@@ -73,5 +73,36 @@
 			</div>
 		</div>
 	</div>
+	<div class="portfolio">
+		<div class="col-md-3">
+			<h2>Portfolio</h2>
+		</div>
+		<div class="col-md-9">
+			<div class="row text-center">
+				<div class="col-md-6">
+					<div class="box vertical-center-parent text-center">
+						<p class="vertical-center-child">Hello World</p>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="box vertical-center-parent text-center">
+						<p class="vertical-center-child">Hello World</p>
+					</div>
+				</div>
+			</div>
+			<div class="row text-center">
+				<div class="col-md-6">
+					<div class="box vertical-center-parent text-center">
+						<p class="vertical-center-child">Hello World</p>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="box vertical-center-parent text-center">
+						<p class="vertical-center-child">Hello World</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
