commented out portfolio

--- a/index.html
+++ b/index.html
@@ -8,64 +8,66 @@
 	<link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-	<div class="main-header vertical-center-parent">
+	<div id="main-header" class="main-header vertical-center-parent">
 		<div class="main-header-content vertical-center-child">
 			<h1>FULL-STACK WEB DEVELOPER</h1>
 			<p>with a passion for creating innovative solutions and writing clean code</p>
 		</div>
 	</div>
-	<div class="about">
-		<div class="col-md-3">
-			<h2>About</h2>
-		</div>
-		<div class="col-md-9">
-			<p>Hello! My name is Matthew Yoshihara and I am software developer currently living in the beautiful city of Seattle. I am a problem solver at heart, and I am passionate about creating well-thought out solutions. I love being active and looking for ways to improve my basketball skills.</p>
+	<div class="about vertical-center-parent">
+		<div class="vertical-center-child">
+			<div class="col-sm-3">
+				<h2>About</h2>
+			</div>
+			<div class="col-sm-9">
+				<p>Hello! My name is Matthew Yoshihara and I am software developer currently living in the beautiful city of Seattle. I am a problem solver at heart, and I am passionate about creating well-thought out solutions. I love being active and looking for ways to improve my basketball skills.</p>
+			</div>
 		</div>
 	</div>
-	<div class="skillset">
-		<div class="col-md-3">
+<div class="skillset">
+		<div class="col-sm-3">
 			<h2>Skill Set</h2>
 		</div>
-		<div class="col-md-9">
+		<div class="col-sm-9">
 			<div class="row">
-				<div class="col-md-3">
+				<div class="col-sm-3">
 					<div class="circle vertical-center-parent text-center">
 						<p class="vertical-center-child">Languages</p>
 					</div>
 				</div>
-				<div class="col-md-3">
+				<div class="col-sm-3">
 					<div class="circle vertical-center-parent text-center">
 						<p class="vertical-center-child">Languages</p>
 					</div>
 				</div>
-				<div class="col-md-3">
+				<div class="col-sm-3">
 					<div class="circle vertical-center-parent text-center">
 						<p class="vertical-center-child">Languages</p>
 					</div>
 				</div>
-				<div class="col-md-3">
+				<div class="col-sm-3">
 					<div class="circle vertical-center-parent text-center">
 						<p class="vertical-center-child">Languages</p>
 					</div>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-3">
+				<div class="col-sm-3">
 					<div class="circle vertical-center-parent text-center">
 						<p class="vertical-center-child">Languages</p>
 					</div>
 				</div>
-				<div class="col-md-3">
+				<div class="col-sm-3">
 					<div class="circle vertical-center-parent text-center">
 						<p class="vertical-center-child">Languages</p>
 					</div>
 				</div>
-				<div class="col-md-3">
+				<div class="col-sm-3">
 					<div class="circle vertical-center-parent text-center">
 						<p class="vertical-center-child">Languages</p>
 					</div>
 				</div>
-				<div class="col-md-3">
+				<div class="col-sm-3">
 					<div class="circle vertical-center-parent text-center">
 						<p class="vertical-center-child">Languages</p>
 					</div>
@@ -73,36 +75,42 @@
 			</div>
 		</div>
 	</div>
-	<div class="portfolio">
-		<div class="col-md-3">
+<!-- 	<div class="portfolio container">
+		<div class="col-sm-3">
 			<h2>Portfolio</h2>
 		</div>
-		<div class="col-md-9">
-			<div class="row text-center">
-				<div class="col-md-6">
-					<div class="box vertical-center-parent text-center">
+		<div class="col-sm-9">
+			<div class="row">
+				<div class="col-lg-6">
+					<div class="portfolio-box vertical-center-parent text-center ">
 						<p class="vertical-center-child">Hello World</p>
 					</div>
 				</div>
-				<div class="col-md-6">
-					<div class="box vertical-center-parent text-center">
+				<div class="col-lg-6">
+					<div class="portfolio-box vertical-center-parent text-center">
 						<p class="vertical-center-child">Hello World</p>
 					</div>
 				</div>
-			</div>
-			<div class="row text-center">
-				<div class="col-md-6">
-					<div class="box vertical-center-parent text-center">
+				<div class="col-lg-6">
+					<div class="portfolio-box vertical-center-parent text-center">
 						<p class="vertical-center-child">Hello World</p>
 					</div>
 				</div>
-				<div class="col-md-6">
-					<div class="box vertical-center-parent text-center">
+				<div class="col-lg-6">
+					<div class="portfolio-box vertical-center-parent text-center">
 						<p class="vertical-center-child">Hello World</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+	<div class="contact vertical-center-parent text-center">
+		<div class="vertical-center-child">
+			<h1>Feel Free to Say Hello</h1>
+			<a href="#main-header"><img src="./images/email.svg" alt="email"></a>
+			<a href="#main-header"><img src="./images/github.svg" alt="github"></a>
+			<a href="#main-header"><img src="./images/linkedin.png" alt="linkedin"></a>
+		</div>
+	</div> -->
 </body>
 </html>
