fixed bug with about section text overflow

--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
 			<p>with a passion for creating innovative solutions and writing clean code</p>
 		</div>
 	</div>
-	<div class="about">
-		<div class="col-md-3">
-			<h2>About</h2>
-		</div>
-		<div class="col-md-9">
-			<p>Hello! My name is Matthew Yoshihara and I am software developer currently living in the beautiful city of Seattle. I am a problem solver at heart, and I am passionate about creating well-thought out solutions. I love being active and looking for ways to improve my basketball skills.</p>
+	<div class="about vertical-center-parent">
+		<div class="vertical-center-child">
+			<div class="col-md-3">
+				<h2>About</h2>
+			</div>
+			<div class="col-md-9">
+				<p>Hello! My name is Matthew Yoshihara and I am software developer currently living in the beautiful city of Seattle. I am a problem solver at heart, and I am passionate about creating well-thought out solutions. I love being active and looking for ways to improve my basketball skills.</p>
+			</div>
 		</div>
 	</div>
-	<div class="skillset">
+<!-- 	<div class="skillset">
 		<div class="col-md-3">
 			<h2>Skill Set</h2>
 		</div>
@@ -72,8 +74,8 @@
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="portfolio">
+	</div> -->
+	<!-- <div class="portfolio">
 		<div class="col-md-3">
 			<h2>Portfolio</h2>
 		</div>
@@ -103,6 +105,6 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 </body>
 </html>
