cleaned up skillset

--- a/index.html
+++ b/index.html
@@ -24,57 +24,114 @@
 			</div>
 		</div>
 	</div>
-<div class="skillset">
-		<div class="col-sm-3">
+<div class="skillset vertical-center-parent">
+	<div class="row vertical-center-child">
+		<div class="col-sm-3 row">
 			<h2>Skill Set</h2>
 		</div>
 		<div class="col-sm-9">
 			<div class="row">
-				<div class="col-sm-3">
-					<div class="circle vertical-center-parent text-center">
-						<p class="vertical-center-child">Languages</p>
-					</div>
+				<div class="col-sm-6">
+					<h3>Languages</h3>
 				</div>
-				<div class="col-sm-3">
-					<div class="circle vertical-center-parent text-center">
-						<p class="vertical-center-child">Languages</p>
-					</div>
-				</div>
-				<div class="col-sm-3">
-					<div class="circle vertical-center-parent text-center">
-						<p class="vertical-center-child">Languages</p>
-					</div>
-				</div>
-				<div class="col-sm-3">
-					<div class="circle vertical-center-parent text-center">
-						<p class="vertical-center-child">Languages</p>
-					</div>
+				<div class="col-sm-6">
+					<ul>
+						<li>Java</li>
+						<li>Javascript</li>
+						<li>Python</li>
+						<li>Swift</li>
+						<li>HTML</li>
+						<li>CSS</li>
+					</ul>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-sm-3">
-					<div class="circle vertical-center-parent text-center">
-						<p class="vertical-center-child">Languages</p>
-					</div>
+				<div class="col-sm-6">
+					<h3>Frontend Frameworks</h3>
 				</div>
-				<div class="col-sm-3">
-					<div class="circle vertical-center-parent text-center">
-						<p class="vertical-center-child">Languages</p>
-					</div>
+				<div class="col-sm-6">
+					<ul>
+						<li>AngularJS</li>
+						<li>Twitter Bootstrap</li>
+						<li>Materialize</li>
+					</ul>
 				</div>
-				<div class="col-sm-3">
-					<div class="circle vertical-center-parent text-center">
-						<p class="vertical-center-child">Languages</p>
-					</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-6">
+					<h3>Backend Frameworks</h3>
 				</div>
-				<div class="col-sm-3">
-					<div class="circle vertical-center-parent text-center">
-						<p class="vertical-center-child">Languages</p>
-					</div>
+				<div class="col-sm-6">
+					<ul>
+						<li>Express.js</li>
+						<li>Django</li>
+						<li>Flask</li>
+					</ul>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-6">
+					<h3>Libraries</h3>
+				</div>
+				<div class="col-sm-6">
+					<ul>
+						<li>JQuery</li>
+						<li>Socket.io</li>
+						<li>Mongoose.js</li>
+						<li>PassportJS</li>
+					</ul>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-6">
+					<h3>Databases</h3>
+				</div>
+				<div class="col-sm-6">
+					<ul>
+						<li>MySQL</li>
+						<li>MongoDB</li>
+					</ul>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-6">
+					<h3>Servers</h3>
+				</div>
+				<div class="col-sm-6">
+					<ul>
+						<li>Node.js</li>
+						<li>Apache</li>
+					</ul>	
+				</div>				
+			</div>
+			<div class="row">
+				<div class="col-sm-6">
+					<h3>Development Tools</h3>
+				</div>
+				<div class="col-sm-6">
+					<ul>
+						<li>Sublime Text</li>
+						<li>Git/Github</li>
+						<li>Terminal</li>
+					</ul>				
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-6">
+					<h3>Methodology</h3>
+				</div>
+				<div class="col-sm-6">
+					<ul>
+						<li>MCV</li>
+						<li>OOP</li>
+						<li>RESTful</li>
+						<li>CRUD</li>
+					</ul>
 				</div>
 			</div>
 		</div>
 	</div>
+</div>
 <!-- 	<div class="portfolio container">
 		<div class="col-sm-3">
 			<h2>Portfolio</h2>
