--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</div>
 	</div>
 	<div class="about vertical-center-parent">
-		<div class="vertical-center-child">
+		<div class="row vertical-center-child">
 			<div class="col-sm-3">
 				<h2>About</h2>
 			</div>
@@ -30,7 +30,7 @@
 			<h2>Skill Set</h2>
 		</div>
 		<div class="col-sm-9">
-			<div class="row">
+			<div class="row skillset-content">
 				<div class="col-sm-6">
 					<h3>Languages</h3>
 				</div>
@@ -45,7 +45,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row skillset-content">
 				<div class="col-sm-6">
 					<h3>Frontend Frameworks</h3>
 				</div>
@@ -57,7 +57,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row skillset-content">
 				<div class="col-sm-6">
 					<h3>Backend Frameworks</h3>
 				</div>
@@ -69,7 +69,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row skillset-content">
 				<div class="col-sm-6">
 					<h3>Libraries</h3>
 				</div>
@@ -82,7 +82,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row skillset-content">
 				<div class="col-sm-6">
 					<h3>Databases</h3>
 				</div>
@@ -93,7 +93,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row skillset-content">
 				<div class="col-sm-6">
 					<h3>Servers</h3>
 				</div>
@@ -104,7 +104,7 @@
 					</ul>	
 				</div>				
 			</div>
-			<div class="row">
+			<div class="row skillset-content">
 				<div class="col-sm-6">
 					<h3>Development Tools</h3>
 				</div>
@@ -116,7 +116,7 @@
 					</ul>				
 				</div>
 			</div>
-			<div class="row">
+			<div class="row skillset-content">
 				<div class="col-sm-6">
 					<h3>Methodology</h3>
 				</div>
